(whrench) Ajustes com base no caso de uso

--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.4</version>
+		<version>3.4.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>br.edu.ifgoias</groupId>
-	<artifactId>academico</artifactId>
+	<groupId>com.Grupo4</groupId>
+	<artifactId>editar-meus-dados</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>academico</name>
-	<description>Sistema Acadêmico - RESTFULL</description>
+	<name>editar-meus-dados</name>
+	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
 		<license/>
